// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Critere Action Non Rempli 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Critere Preuves Non Rempli 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Critere Score Non Atteint 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Demande Envoyee 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      Votre demande pour la 
      première
       étoile a été envoyée
    </p>
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation OK 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={false}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation OK 2 Eme Etoile 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <p
      className="m-0"
    >
      <span
        className="capitalize"
      >
        première
      </span>
       
      étoile depuis le
       
      15 décembre 2022
    </p>
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      deuxième
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={false}
      onClick={[Function]}
    >
      Demander un audit
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/HeaderLabellisation Remplissage Incomplet 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;
